--- a/case-studies/buddySystemCaseStudy.html
+++ b/case-studies/buddySystemCaseStudy.html
@@ -35,11 +35,11 @@
             <div class="condensedNavContents">
                 <div>
                     <ul>
-                        <li><a class="pageLink" href="https://meganemcclure.github.io/uxhw_19/index.html"><h4>Home</h4></a></li>
-                        <li><a class="pageLink" href="https://meganemcclure.github.io/uxhw_19/work.html"><h4>My Work</h4></a></li>
-                        <li><a class="pageLink" href="https://meganemcclure.github.io/uxhw_19/about.html"><h4>About Me</h4></a></li>
-                        <li><a class="pageLink" href="https://meganemcclure.github.io/uxhw_19/contact.html"><h4>Contact</h4></a></li>
-                        <li><a class="pageLink" href="https://meganemcclure.github.io/uxhw_19/docs/Megan%20McClure%20Resume.pdf"><h4>Resume</h4></a></li>
+                        <li><a class="pageLink" href="./../index.html"><h4>Home</h4></a></li>
+                        <li><a class="pageLink" href="./../work.html"><h4>My Work</h4></a></li>
+                        <li><a class="pageLink" href="./../about.html"><h4>About Me</h4></a></li>
+                        <li><a class="pageLink" href="./../contact.html"><h4>Contact</h4></a></li>
+                        <li><a class="pageLink" href="./../docs/Megan McClure Resume.pdf"><h4>Resume</h4></a></li>
                     </ul>
                     <!-- <span class="navDivider"></span> -->
                     <ul>
@@ -440,6 +440,9 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="./../js/index.js"></script>
 
     <footer>
         <h2>get in touch</h2>
