--- a/case-studies/rfecyCaseStudy.html
+++ b/case-studies/rfecyCaseStudy.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
     <head>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat&display=swap" rel="stylesheet">
@@ -33,11 +34,11 @@
             <div class="condensedNavContents">
                 <div>
                     <ul>
-                        <li><a class="pageLink" id="currentPage" href="./index.html"><h4>Home</h4></a></li>
-                        <li><a class="pageLink" href="./work.html"><h4>My Work</h4></a></li>
-                        <li><a class="pageLink" href="./about.html"><h4>About Me</h4></a></li>
-                        <li><a class="pageLink" href="./contact.html"><h4>Contact</h4></a></li>
-                        <li><a class="pageLink" href="./docs/Megan McClure Resume.pdf"><h4>Resume</h4></a></li>
+                        <li><a class="pageLink" href="./../index.html"><h4>Home</h4></a></li>
+                        <li><a class="pageLink" href="./../work.html"><h4>My Work</h4></a></li>
+                        <li><a class="pageLink" href="./../about.html"><h4>About Me</h4></a></li>
+                        <li><a class="pageLink" href="./../contact.html"><h4>Contact</h4></a></li>
+                        <li><a class="pageLink" href="./../docs/Megan McClure Resume.pdf"><h4>Resume</h4></a></li>
                     </ul>
                     <!-- <span class="navDivider"></span> -->
                     <ul>
@@ -63,7 +64,7 @@
         </div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-        <script src="../js/index.js"></script>
+        <script src="./../js/index.js"></script>
     </body>
     <footer>
         <h2>get in touch</h2>
