update homepage layout

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="downIconContainer"><i id="downIcon" class="fa fa-solid fa-chevron-down"></i></div>
 
         <div class="contentSection">
-            <h1>Check out my design work!</h1>
+            <h2>Check out my design work!</h2>
             <div class="caseStudySection">
                 <img src="./images/BuddySystemMockup.jpg" />
                 <span class="caseStudyContents">
@@ -97,10 +97,10 @@
             </div>
 
             <div class="devWorkSection">
-                <h1>Development work</h1>
+                <!-- <h2>Development work</h2> -->
                 <div class="devDetails">
                     <a class="pageLink" href="https://github.com/meganemcclure">
-                        <h4>Check out my development work on github!</h4>
+                        <h2>Check out my development work on github!</h2>
                     </a>
                     <i id="githubIconBody" class="fa fa-brands fa-github"></i>
                 </div>
