update case study descriptions

--- a/work.html
+++ b/work.html
@@ -75,13 +75,11 @@
                         <h4 class="caseStudyTitle">Resources for Exceptional Children and Youth Website Redesign</h4>
                         <div class="dividerLine"></div>
                         <p class="caseStudyDescription">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
-                            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim 
-                            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut 
-                            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
-                            in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia 
-                            deserunt mollit anim id est laborum.
+                            Resources for Exceptional Children and Youth (RFECY) is a non-profit organization in 
+                            Durham region that provides resources and support for children with disabilities and 
+                            their families. This project focuses on redesigning the RFECY website to improve user 
+                            experience and make it easier for family and guardiens to find the tools and resources
+                            they need.
                         </p>
                         <a class="pageLink caseStudyLink" href="./case-studies/rfecyCaseStudy.html">
                             <h5>Check out the case study</h5>
@@ -95,13 +93,10 @@
                         <h4 class="caseStudyTitle">Canada Post Website Navigation Redesign</h4>
                         <div class="dividerLine"></div>
                         <p class="caseStudyDescription">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
-                            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim 
-                            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut 
-                            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
-                            in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia 
-                            deserunt mollit anim id est laborum.
+                            Canada Post serves millions of Canadians every day by providing mail and parcel delivery, 
+                            but their website navigation is lacking and confusing for many. This project focuses
+                            on redesigning the Canada Post website navigation to improve user experience and make it
+                            easier for Canadians to navigate between pages on the Canada Post website.
                         </p>
                         <a class="pageLink caseStudyLink" href="./case-studies/canadaPostCaseStudy.html">
                             <h5>Check out the case study</h5>
